# history-footnote-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  ISSUES.md  README.md  RELEASE_NOTES_v2.8.0.md  pyproject.toml  start-server.sh
deploy/: README.md  deploy.sh  hfe-backend.service  nginx.conf
docs/: 01-decision-log.md  ARCHIVE_INDEX.md  CHANGELOG_v1.7.30.md  INTEGRATION_P2_v1.7.30.md  INTEGRATION_TODO.md  README.md  stress_test_report_v1.7.28.md  万历十五年时代包 · 支线路径Wiki v4.0（P1遗漏补充）.md  万历十五年时代包 · 离乡路线Wiki v1.0.md  历史注脚体验引擎：完整产品设计文档 v1.0.md  历史注脚体验引擎：完整产品设计文档 v2.0.md  调研成果汇报.md
scripts/: README.md  check_save_health.sh  cleanup_css.py  commit_msg.txt  count_tests.py  debug_css.py  debug_scroll.py  debug_v32_7.py  debug_w35b.py  debug_w35c.py  debug_w35d.py  debug_w35e.py  debug_w35f.py  deploy-pre-start.sh  dev-server.sh  diag_toast.js  dump_state.py  e2e_loading_overlay.js  generate_api_doc.py  generate_chapter_blueprints.py  inspect_dom.sh  install_mmx_cli_oauth.sh  repro_gender_mismatch.js  retry_beijing.py  review_10rounds_dimensions.py  review_10rounds_real.py  run_w33_tests.py  screenshot_game.py  screenshot_wizard_steps.py  smoke_v195_chrome.py  smoke_v195_chrome2.py  smoke_v195_layout_inject.py  smoke_v195_start.py  smoke_v280_10chapters.py  smoke_v280_build.py  smoke_v280_dm_tool.py  smoke_v280_real_llm.py  smoke_v280_real_llm_30rounds.py  spa_server.py  split_event_parser.py  (+104 more)
tests/: run_all_v26.py  test_account_system.py  test_admin_followup.py  test_chapter_blueprints.py  test_chapter_integration.py  test_currency.py  test_l9_replay.py  (+74 more)
(+560 files in other folders)
